add missing updatedAt and createdAt to gin schemas
