# backend-gin/internal/api/docs/swagger.json
@@ -1126,6 +1126,11 @@
                     "minLength": 10,
                     "example": "Fulham road"
                 },
+                "createdAt": {
+                    "description": "creation datetime",
+                    "type": "string",
+                    "example": "2024-01-12T10:15:30.000Z"
+                },
                 "creatorId": {
                     "description": "The ID of the place creator, 24 characters",
                     "type": "string",
@@ -1160,6 +1165,11 @@
                     "type": "string",
                     "minLength": 10,
                     "example": "Stamford Bridge"
+                },
+                "updatedAt": {
+                    "description": "last update datetime",
+                    "type": "string",
+                    "example": "2024-01-12T10:15:30.000Z"
                 }
             }
         },
@@ -1270,6 +1280,11 @@
         "schemas.UserRead": {
             "type": "object",
             "properties": {
+                "createdAt": {
+                    "description": "creation datetime",
+                    "type": "string",
+                    "example": "2024-01-12T10:15:30.000Z"
+                },
                 "email": {
                     "description": "The user email",
                     "type": "string",
@@ -1305,6 +1320,11 @@
                     "example": [
                         "683b21134e2e5d46978daf1f"
                     ]
+                },
+                "updatedAt": {
+                    "description": "last update datetime",
+                    "type": "string",
+                    "example": "2024-01-12T10:15:30.000Z"
                 }
             }
         },
