# backend-gin/internal/models/schemas/place.go
@@ -58,13 +58,15 @@ type PlacePost struct {
 }
 
 type PlaceRead struct {
-	ID          string   `json:"id" validate:"hexadecimal,len=24" example:"683b21134e2e5d46978daf1f" bson:"_id,omitempty"`                 // The ID of the place 24 characters
-	Title       string   `json:"title" validate:"min=10" example:"Stamford Bridge" bson:"title"`                                           // The place title/name, 10 characters minimum
-	Description string   `json:"description" validate:"min=10" example:"Stadium of Chelsea football club" bson:"description"`              // The place description, 10 characters minimum
-	Address     string   `json:"address" validate:"min=10" example:"Fulham road" bson:"address"`                                           // The place address
-	Location    Location `json:"location" bson:"location"`                                                                                 // Location object (can be sent as JSON string)
-	ImageUrl    string   `json:"imageUrl" validate:"omitempty" example:"avatar2_80e32f88-c9a5-4fcd-8a56-76b5889440cd.jpg" bson:"imageUrl"` // local url on the storage
-	CreatorID   string   `json:"creatorId" validate:"hexadecimal,len=24" example:"683b21134e2e5d46978daf1f" bson:"creatorId"`              // The ID of the place creator, 24 characters
+	ID          string    `json:"id" validate:"hexadecimal,len=24" example:"683b21134e2e5d46978daf1f" bson:"_id,omitempty"`                 // The ID of the place 24 characters
+	Title       string    `json:"title" validate:"min=10" example:"Stamford Bridge" bson:"title"`                                           // The place title/name, 10 characters minimum
+	Description string    `json:"description" validate:"min=10" example:"Stadium of Chelsea football club" bson:"description"`              // The place description, 10 characters minimum
+	Address     string    `json:"address" validate:"min=10" example:"Fulham road" bson:"address"`                                           // The place address
+	Location    Location  `json:"location" bson:"location"`                                                                                 // Location object (can be sent as JSON string)
+	ImageUrl    string    `json:"imageUrl" validate:"omitempty" example:"avatar2_80e32f88-c9a5-4fcd-8a56-76b5889440cd.jpg" bson:"imageUrl"` // local url on the storage
+	CreatorID   string    `json:"creatorId" validate:"hexadecimal,len=24" example:"683b21134e2e5d46978daf1f" bson:"creatorId"`              // The ID of the place creator, 24 characters
+	CreatedAt   time.Time `json:"createdAt" bson:"createdAt" example:"2024-01-12T10:15:30.000Z"`                                            // creation datetime
+	UpdatedAt   time.Time `json:"updatedAt" bson:"updatedAt" example:"2024-01-12T10:15:30.000Z"`                                            // last update datetime
 }
 
 type PlacesPaginated = types_.PaginatedData[PlaceRead]
